--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="img/favicon.png">
     <!-- <base href="/app/"> -->
     <base href="/">
-    <title>Spring Equinoxx</title>
+    <title>Spring ESR</title>
 
     <!-- Main styles for this application -->
     <link href="css/style.css" rel="stylesheet">
